--- a/src/component/Contact/Contact.module.css
+++ b/src/component/Contact/Contact.module.css
@@ -2,4 +2,33 @@
 .contact {
     height: 100vh;
     background: #416e1d;
+    display: flex;
+    justify-content: center;
+}
+.container {
+    width: 80%;
+    border: 1px solid;
+
+}
+.title {
+    text-align: center;
+    margin: 0;
+    margin-bottom: 100px;
+}
+.form {
+    margin: 0 auto;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+input {
+    padding: 15px;
+    margin-bottom: 20px;
+
+}
+textarea {
+    padding: 15px;
+    height: 100px;
+    resize: none;
+
 }
