--- a/src/component/Skills/CardItem/CardItem.module.css
+++ b/src/component/Skills/CardItem/CardItem.module.css
@@ -1,14 +1,22 @@
 .cardItem {
+    border: 1px solid;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 15px;
 }
 
 .icon {
-}
-
-.icon {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .name {
+    text-align: center;
 }
 
 .description {
+    text-align: center;
 }
