--- a/src/component/Slogan/Slogan.module.css
+++ b/src/component/Slogan/Slogan.module.css
@@ -2,4 +2,20 @@
 .slogan {
     height: 300px;
     background: #6e4d00;
+    display: flex;
+    justify-content: center;
+}
+.container {
+    border: 1px solid;
+    width: 80%;
+    text-align: center;
+}
+.title {
+    margin: 0;
+    text-align: center;
+    margin-bottom: 100px;
+}
+.btn {
+    text-align: center;
+    text-decoration: none;
 }
