--- a/src/component/Project/CardItem/ProjectItem.module.css
+++ b/src/component/Project/CardItem/ProjectItem.module.css
@@ -1,12 +1,35 @@
 .cardItem {
-    border: 1px solid;
-    width: 40%;
+    width: 650px;
+    height: 100%;
 }
 
 .name {
     text-align: center;
 }
 
-.description {
-    text-align: center;
+.img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.projectInfo {
+    padding: 25px;
+}
+
+.projectTitle {
+    margin: 0 0 5px;
+    color: #444;
+    font-size: 18px;
+    line-height: 26px;
+}
+
+.projectText {
+    line-height: 1.5;
+    color: #585858;
+    font-weight: 400;
 }
