--- a/src/component/Project/Project.module.css
+++ b/src/component/Project/Project.module.css
@@ -1,28 +1,13 @@
 
 .project {
-    background: #11576e;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
 }
 
 .container {
-    background: #fff;
     width: 100%;
     padding: 150px 15px;
     margin: 0 auto;
-}
-
-.title {
-    text-align: center;
-    margin: 0;
-}
-
-.title h2 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 800;
-    color: #444;
-    font-size: 55px;
-    line-height: 1.2;
 }
 
 .wrapper {
