--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,5 @@
+@import "common/styles/container";
+
 .App {
 
 }
@@ -16,6 +18,7 @@ a {
 
 body {
     box-sizing: border-box;
+    background: #fff;
 }
 
 
