--- a/src/common/styles/sass/mixins.scss
+++ b/src/common/styles/sass/mixins.scss
@@ -7,3 +7,10 @@
   font-weight: $fontWeight;
   color: $textColor;
 }
+
+
+@mixin subText($fontFamily,$fontSize,$fontWeight) {
+  font-family: $fontFamily;
+  font-size: $fontSize;
+  font-weight: $fontWeight;
+}
