--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -4,6 +4,7 @@ $textSecondColor: #585858;
 $primaryColor: #000;
 $bgColor: #fff;
 $bgSecondColor: #8c8c8c0f;
+$textColorAlt: #333;
 
 //Font
 $fontTitle: 'Roboto', sans-serif;
