--- a/src/component/Footer/Footer.module.scss
+++ b/src/component/Footer/Footer.module.scss
@@ -1,40 +1,31 @@
+@import "./../../common/styles/container";
 
 .footer {
-    height: 200px;
-    background: #246e6a;
-    display: flex;
-    justify-content: center;
-}
-
-.container {
-    width: 80%;
-    text-align: center;
-    border: 1px solid;
+  display: flex;
+  justify-content: center;
 }
 
 .title {
-    text-align: center;
+  text-align: center;
 }
 
-
-
 @media screen and (max-width: 600px) {
-    .social {
-        display:flex ;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+  .social {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .copyring {
-    text-align: center;
+  text-align: center;
 }
 
 .link {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .link:last-child {
-    margin-right: 0;
+  margin-right: 0;
 }
