--- a/src/component/Slogan/Slogan.module.scss
+++ b/src/component/Slogan/Slogan.module.scss
@@ -1,21 +1,17 @@
+@import "./../../common/styles/container";
 
 .slogan {
-    height: 300px;
-    background: #6e4d00;
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
-.container {
-    border: 1px solid;
-    width: 80%;
-    text-align: center;
-}
+
 .title {
-    margin: 0;
-    text-align: center;
-    margin-bottom: 100px;
+  margin: 0;
+  text-align: center;
+  margin-bottom: 100px;
 }
+
 .btn {
-    text-align: center;
-    text-decoration: none;
+  text-align: center;
+  text-decoration: none;
 }
