--- a/src/component/Footer/Footer.module.scss
+++ b/src/component/Footer/Footer.module.scss
@@ -1,8 +1,10 @@
 @import "./../../common/styles/container";
+@import './../../common/styles/sass/variables';
+@import './../../common/styles/sass/mixins';
 
 .footer {
-  display: flex;
-  justify-content: center;
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
 
 .title {
