--- a/src/component/Main/Main.module.scss
+++ b/src/component/Main/Main.module.scss
@@ -1,12 +1,12 @@
 @import "./../../common/styles/container";
 
 .main {
-
+  padding-bottom: 50px;
   .container {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    @media (max-width: 768px){
+    @media (max-width: 768px) {
       flex-direction: column;
     }
 
