--- a/src/component/Slogan/Slogan.module.scss
+++ b/src/component/Slogan/Slogan.module.scss
@@ -1,14 +1,15 @@
 @import "./../../common/styles/container";
+@import './../../common/styles/sass/variables';
+@import './../../common/styles/sass/mixins';
 
 .slogan {
-  display: flex;
-  justify-content: center;
+  @include padding;
 }
 
 .title {
   margin: 0;
   text-align: center;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 .btn {
