--- a/src/component/Project/cardItem/ProjectItem.module.scss
+++ b/src/component/Project/cardItem/ProjectItem.module.scss
@@ -1,13 +1,13 @@
 @import './../../../common/styles/sass/variables';
+@import './../../../common/styles/sass/mixins';
 
 .cardItem {
   width: 500px;
-  height: 100%;
+  @include col;
 
   .img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexCenter;
+    max-width: 100%;
     height: 300px;
     background-size: cover;
     background-position: center;
@@ -27,12 +27,13 @@
 
     .btn {
       position: relative;
-      z-index: 1;
+      z-index: 2;
 
       .name {
+        position: relative;
+        z-index: 3;
         text-align: center;
       }
-
     }
   }
 
@@ -41,14 +42,12 @@
 
     .projectTitle {
       margin: 0 0 5px;
-      color: $textColor;
-      font-size: 18px;
-      line-height: 26px;
+      @include text($fontTitle, 18px, 26px, $textColor);
     }
+
     .projectText {
-      line-height: 1.5;
-      color: $textSecondColor;
-      font-weight: 400;
+      @include text($fontTitle, 16px, 1.5, 400);
+      color: $textColor;
     }
 
 
