--- a/src/component/footer/Footer.module.scss
+++ b/src/component/footer/Footer.module.scss
@@ -4,7 +4,7 @@
 
 .footer {
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
 }
 
 .title {
@@ -15,10 +15,9 @@
 
 @media screen and (max-width: 600px) {
   .social {
-    display: flex;
+   @include flexCenter;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
   }
 }
 
