--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,24 +1,20 @@
-@import "common/styles/container";
 
-.App {
 
-}
-
-.portfolio {
-
-}
-h2{
-    margin: 0;
+h2 {
+  margin: 0;
 }
 
 a {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    box-sizing: border-box;
-    background: #fff;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
+  outline: none;
 }
 
 
