--- a/src/component/Main/Main.module.scss
+++ b/src/component/Main/Main.module.scss
@@ -2,13 +2,12 @@
 
 .main {
   padding-bottom: 50px;
+
   .container {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    @media (max-width: 768px) {
-      flex-direction: column;
-    }
+    flex-wrap: wrap;
 
     .greeting {
       display: flex;
