--- a/src/common/ui/textarea/textarea.module.scss
+++ b/src/common/ui/textarea/textarea.module.scss
@@ -4,7 +4,10 @@
 .textarea {
   resize: none;
   outline: none;
-  width: 500px;
+  max-width: 500px;
+  width: 100%;
+  height: 100px;
   padding: 12px;
+  border-radius: 0;
   @include text($fontTitle, 13px, 20px, 400);
 }
