--- a/src/component/Header/nav/Nav.module.scss
+++ b/src/component/Header/nav/Nav.module.scss
@@ -15,6 +15,7 @@
   }
 
   .link {
+    cursor: pointer;
     text-decoration: none;
     padding: 0 15px;
     @include subText($fontTitle, 18px, 400);
@@ -29,9 +30,8 @@
       display: none;
     }
   }
-
-
 }
+
 
 
 
