--- a/src/component/Skills/Skills.module.scss
+++ b/src/component/Skills/Skills.module.scss
@@ -7,7 +7,9 @@
   .card {
     display: flex;
     justify-content: space-between;
-
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
     .reactIcon {
       @include subText($fontTitle, 55px, 400);
       transform: rotate(-45deg);
