--- a/src/component/contact/Contact.module.scss
+++ b/src/component/contact/Contact.module.scss
@@ -4,12 +4,12 @@
 
 .contact {
   @include padding;
-
   .form {
     margin: 0 auto;
     width: 500px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     @media screen and (max-width: 560px) {
       width: 100%;
     }
