--- a/src/component/Skills/cardItem/CardItem.module.scss
+++ b/src/component/Skills/cardItem/CardItem.module.scss
@@ -12,13 +12,9 @@
     margin: 0 auto 25px;
     @include flexCenter;
     transform: rotate(45deg);
-    color: $textColorAlt;
+    color: $bgColor;
     transition: all .2s linear;
     opacity: 0.8;
-
-    &:hover {
-      color: #61dafb;
-    }
   }
 
   .name {
