--- a/src/component/Project/Project.module.scss
+++ b/src/component/Project/Project.module.scss
@@ -5,8 +5,7 @@
 .project {
   @include padding;
   .container {
-    .wrapper {
-      flex-wrap: wrap;
+    .projectWrapper {
       display: flex;
       justify-content: space-between;
     }
