--- a/src/component/Skills/cardItem/CardItem.module.scss
+++ b/src/component/Skills/cardItem/CardItem.module.scss
@@ -5,7 +5,7 @@
   @include col;
   padding-top: 19px;
 
-  .iconBox {
+  .cardItemiconBox {
     width: 80px;
     height: 80px;
     background: #585858;
@@ -17,7 +17,7 @@
     opacity: 0.8;
   }
 
-  .name {
+  .cardItemName {
     text-align: center;
     margin-bottom: 15px;
     margin-top: 30px;
