--- a/src/component/Header/nav/Nav.module.scss
+++ b/src/component/Header/nav/Nav.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: flex-end;
 
-  .btnMenu {
+  .navBtn {
     cursor: pointer;
     display: block;
     @media (min-width: 768px) {
@@ -14,7 +14,7 @@
     }
   }
 
-  .link {
+  .navlink {
     cursor: pointer;
     text-decoration: none;
     margin: 0 15px;
