--- a/src/component/Project/cardItem/ProjectItem.module.scss
+++ b/src/component/Project/cardItem/ProjectItem.module.scss
@@ -2,10 +2,10 @@
 @import './../../../common/styles/sass/mixins';
 
 .cardItem {
-  width: 500px;
+  width: 33%;
   @include col;
 
-  .img {
+  .cardItemImg {
     @include flexCenter;
     max-width: 100%;
     height: 300px;
@@ -39,13 +39,14 @@
 
   .projectInfo {
     padding: 25px;
+    text-align: center;
 
-    .projectTitle {
+    .projectInfoProjectTitle {
       margin: 0 0 5px;
       @include text($fontTitle, 18px, 26px, $textColor);
     }
 
-    .projectText {
+    .projectInfoProjectText {
       @include text($fontTitle, 16px, 1.5, 400);
       color: $textColor;
     }
