--- a/src/component/footer/Footer.module.scss
+++ b/src/component/footer/Footer.module.scss
@@ -24,13 +24,13 @@
       }
     }
 
-    .reactIcon {
+    .socialReactIcon {
       font-size: 18px;
       margin-right: 10px;
     }
   }
 
-  .copyring {
+  .footerCopyring {
     text-align: center;
     @include text($fontTitle, 16px, 1.5, 400);
     color: $textSecondColor;
