--- a/src/component/Project/Project.module.scss
+++ b/src/component/Project/Project.module.scss
@@ -4,11 +4,16 @@
 
 .project {
   @include padding;
+
   .container {
     .projectWrapper {
       display: flex;
       justify-content: space-between;
+      @media (max-width: 768px) {
+        flex-wrap: wrap;
+      }
     }
+
   }
 }
 
