--- a/src/common/ui/button/button.module.scss
+++ b/src/common/ui/button/button.module.scss
@@ -7,7 +7,11 @@
   .btn {
     cursor: pointer;
     border: 2px solid $textColor;
-    padding: 14px 50px 14px 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 161px;
+    height: 50px;
     position: relative;
     z-index: 2;
     border-radius: 50px;
@@ -23,7 +27,6 @@
       border: 2px solid $bgColor;
     }
   }
-
 }
 
 
