--- a/src/component/slogan/Slogan.module.scss
+++ b/src/component/slogan/Slogan.module.scss
@@ -8,9 +8,14 @@
 }
 
 .btnAlt {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 161px;
+  height: 50px;
   cursor: pointer;
   border: 2px solid $textColor;
-  padding: 14px 50px 14px 50px;
+  margin: 0 auto;
   position: relative;
   z-index: 2;
   border-radius: 50px;
@@ -19,6 +24,7 @@
   transition: all .2s linear;
   color: $bgColor;
   background: $textColor;
+
   &:hover {
     background: $bgColor;
     color: $textColor;
