--- a/src/component/Header/nav/Nav.module.scss
+++ b/src/component/Header/nav/Nav.module.scss
@@ -8,9 +8,9 @@
 
   .navBtn {
     cursor: pointer;
-    display: block;
-    @media (min-width: 768px) {
-      display: none;
+    display: none;
+    @media (max-width: 768px) {
+      display: block;
     }
   }
 
