--- a/src/component/Header/nav/Nav.module.scss
+++ b/src/component/Header/nav/Nav.module.scss
@@ -20,14 +20,14 @@
     margin: 0 15px;
     @include subText($fontTitle, 18px, 400);
     text-transform: capitalize;
-    color: $textSecondColor;
+    color: $textColor;
 
     &:last-child {
       padding-right: 0;
     }
 
     &:hover {
-      color: $textColor;
+      opacity: 0.9;
     }
   }
 
