--- a/src/component/Skills/cardItem/CardItem.module.scss
+++ b/src/component/Skills/cardItem/CardItem.module.scss
@@ -8,13 +8,12 @@
   .cardItemiconBox {
     width: 80px;
     height: 80px;
-    background: #585858;
+    background: $textColor;
     margin: 0 auto 25px;
     @include flexCenter;
     transform: rotate(45deg);
     color: $bgColor;
     transition: all .2s linear;
-    opacity: 0.8;
   }
 
   .cardItemName {
