--- a/src/component/Main/Main.module.scss
+++ b/src/component/Main/Main.module.scss
@@ -22,8 +22,7 @@
       margin: 0 auto;
       height: 400px;
       width: 300px;
-      background: #6e4f68;
-
+      border-radius: 50px;
     }
   }
 }
