--- a/src/component/Header/mobile-menu/Mobilemenu.module.scss
+++ b/src/component/Header/mobile-menu/Mobilemenu.module.scss
@@ -1,8 +1,38 @@
-
 @import "./../../../common/styles/sass/variables";
+@import "./../../../common/styles/sass/mixins";
 
 
+.mobileWrapper {
+  width: 300px;
+background: #6e4f68;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
 
+
+  .navlink {
+    cursor: pointer;
+    text-decoration: none;
+    margin: 0 15px;
+    @include subText($fontTitle, 18px, 400);
+    text-transform: capitalize;
+    color: $textColor;
+    &:last-child {
+      padding-right: 0;
+    }
+
+    &:hover {
+      opacity: 0.9;
+    }
+  }
+
+  @media screen and (min-width: 678px) {
+    display: none;
+  }
+}
 
 
 
