--- a/src/component/Header/Header.module.scss
+++ b/src/component/Header/Header.module.scss
@@ -1,8 +1,12 @@
 @import "./../../common/styles/container";
 
 .header {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding: 50px 0;
+
+  @media screen and (max-width: 678px) {
+    padding-bottom: 50px;
+    padding-top: 0;
+  }
 }
 
 
