--- a/src/component/Header/mobile-menu/Mobilemenu.module.scss
+++ b/src/component/Header/mobile-menu/Mobilemenu.module.scss
@@ -3,28 +3,56 @@
 
 
 .mobileWrapper {
-  width: 300px;
-background: #6e4f68;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
+
   margin: 0 auto;
+  position: relative;
+  width: 100%;
+  height: 100%;
 
+  .mobileWrapperItem {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    background: #fff;
+    right: 0;
+    top: 0;
+    height: 0;
+    padding: 20px;
+    transform: translate(0, -160px);
+    transition: 0.7s;
 
-  .navlink {
-    cursor: pointer;
-    text-decoration: none;
-    margin: 0 15px;
-    @include subText($fontTitle, 18px, 400);
-    text-transform: capitalize;
-    color: $textColor;
-    &:last-child {
-      padding-right: 0;
+    .navlink {
+      cursor: pointer;
+      text-decoration: none;
+      margin: 0 15px;
+      @include subText($fontTitle, 18px, 400);
+      text-transform: capitalize;
+      color: $textColor;
+
+      &:last-child {
+        padding-right: 0;
+      }
+
+      &:hover {
+        opacity: 0.9;
+      }
     }
+  }
 
-    &:hover {
+  .show {
+    transform: translate(0, 0);
+    height: 100px;
+  }
+
+  .mobileBtn {
+    position: absolute;
+    top: 17px;
+    right: 20px;
+    z-index: 3;
+    cursor: pointer;
+    &:hover{
       opacity: 0.9;
     }
   }
@@ -32,6 +60,7 @@ background: #6e4f68;
   @media screen and (min-width: 678px) {
     display: none;
   }
+
 }
 
 
